添加了应引导页

--- a/app/src/main/res/layout/guide_pager3.xml
+++ b/app/src/main/res/layout/guide_pager3.xml
@@ -7,6 +7,6 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:text="pager3"
-        android:background="#bbbbbb"/>
+        android:background="#edb405"/>
 
 </LinearLayout>
