--- a/app/src/main/res/layout/guide_pager3.xml
+++ b/app/src/main/res/layout/guide_pager3.xml
@@ -3,10 +3,14 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:text="pager3"
-        android:background="#edb405"/>
+        android:gravity="center_horizontal">
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/guide_pager3"/>
+    </LinearLayout>
 
 </LinearLayout>
