--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,35 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="45dp"
-        android:background="#d05eb3"></LinearLayout>
+        android:background="#d05eb3"
+        android:id="@+id/title_bar"
+        android:gravity="center">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="香橙家园"
+            android:textSize="22sp"
+            android:textColor="#ffffff"
+            android:gravity="center"/>
+    </LinearLayout>
+
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
+        android:id="@+id/pull_to_refresh_listview"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:layout_below="@id/title_bar"
+        android:background="#ffffff">
+
+
+
+    </com.handmark.pulltorefresh.library.PullToRefreshListView>
 
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="45dp"
         android:background="#d05eb3"
-        android:layout_alignParentBottom="true"></LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:id="@+id/bottom_bar"></LinearLayout>
 
 </RelativeLayout>
